bbdd/mysql/percona/iptables.rules
# Tener en cuenta donde esta conectada cada interfaz
# MySQL lo ponemos para que pueda escuchar en ambas interfaces
# En la penultima linea se rechazan todos los paquetes que no hagan match en alguna regla anterior
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3306 -j ACCEPT
-A INPUT -i eth1 -p tcp -m state --state NEW -m tcp --dport 4567 -j ACCEPT
-A INPUT -i eth1 -p tcp -m state --state NEW -m tcp --dport 4568 -j ACCEPT
-A INPUT -i eth1 -p tcp -m state --state NEW -m tcp --dport 4444 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
